--- a/src/index.css
+++ b/src/index.css
@@ -20,10 +20,10 @@
     height: 2em;
     margin: -25px 0 0 -25px;
     text-indent: -9999em;
-    border-top: 0.5em solid #75a6f0;
-    border-right: 0.5em solid rgba(245, 245, 245, 0.5);
-    border-bottom: 0.5em solid rgba(245, 245, 245, 0.5);
-    border-left: 0.5em solid rgba(245, 245, 245, 0.5);
+    border-top: 1.5em solid #03449d;
+    border-right: 1.5em solid rgba(245, 245, 245, 0.5);
+    border-bottom: 1.5em solid rgba(245, 245, 245, 0.5);
+    border-left: 1.5em solid rgba(245, 245, 245, 0.5);
     -webkit-transform: translateZ(0);
     -ms-transform: translateZ(0);
     transform: translateZ(0);
@@ -33,8 +33,8 @@
   #preloader-inner,
   #preloader-inner:after {
     border-radius: 50%;
-    width: 5em;
-    height: 5em; }
+    width: 10em;
+    height: 10em; }
   
   @-webkit-keyframes load8 {
     0% {
@@ -51,3 +51,7 @@
     100% {
       -webkit-transform: rotate(360deg);
       transform: rotate(360deg); } }
+
+      .meal{
+        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+      }
